tests/neg-macros/macro-class-not-found-2.check
-- Error: tests/neg-macros/macro-class-not-found-2/Bar.scala:4:13 ------------------------------------------------------
4 |  Foo.myMacro() // error
  |  ^^^^^^^^^^^^^
  |  Exception occurred while executing macro expansion.
  |  java.lang.NoClassDefFoundError: this.is.not.a.Class
  |  	at Foo$.aMacroImplementation(Foo.scala:8)
  |
  |---------------------------------------------------------------------------------------------------------------------
  |Inline stack trace
  |·····················································································································
  |This location contains code that was inlined from Foo.scala:5
5 |  inline def myMacro(): Unit = ${ aMacroImplementation }
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^
  ·---------------------------------------------------------------------------------------------------------------------
